--- a/css/main.css
+++ b/css/main.css
@@ -102,122 +102,108 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+/* The code below are our custom style rules for the website. 
+    The code directly underneathe hold the most basic stylerules 
+    such as the color scheme. It also adds some spacing the the main content. */
+    html {
+        background-color: rgb(0, 64, 137);
 
-/* general styles */
 
+    }
 
-html {
-    background-color: rgb(0, 64, 137);
+    body {
+         background-color: rgb(220, 220, 220);
+        margin-left: 5vw;
+        margin-right: 5vw;
 
-
-}
-
-body {
-    background-color: rgb(220, 220, 220);
-    margin-left: 5vw;
-    margin-right: 5vw;
-
-}
+    }
 
 
 
 /* Article Styles */
+/* The code directly below holds style rules for the body elements, 
+which include h1 elements and elements that hold the main content. 
+The style rules consist of spacing and font size.  */
+    body article>p {
+        width: 80vw;
+        height: 30vh;
+    }
 
-body article>p {
-    width: 80vw;
-    height: 30vh;
-}
+    body article>p {
+        padding-top: 10px;
+        padding-right: 60px;
+        padding-bottom: 25px;
+        padding-left: 5px;
+        margin-left: 15px;
+        font-size: 2.3vw;
+        font-size: 2.8vh;
 
-body article>p {
-    padding-top: 10px;
-    padding-right: 60px;
-    padding-bottom: 3px;
-    padding-left: 5px;
-    margin-left: 15px;
-    font-size: 2.3vw;
-    font-size: 2.8vh;
-    /* font-size: 2px;  */
-    /* margin-right: 30px; */
-}
+    }
 
-article h1 {
-    padding-left: 15px;
-    padding-top: 0px;
+    article h1 {
+        padding-left: 15px;
+        padding-top: 0px;
 
-}
+    }
 
-article h2 {
-    text-align: center;
-}
+    article h2 {
+        text-align: center;
+    }
+ 
 
-/* Body Styles */
-p:nth-of-type(1n) {
-    text-indent: 5vw;
-}
+    p:nth-of-type(1n) {
+        text-indent: 5vw;
+    }
 
-p:nth-of-type(2n) {
-    text-indent: 5vw;
-}
-
-/* Header Styles */
-header>nav {
-    display: table;
-    width: 100%;
-    background-color: rgb(147, 147, 147);
-    font-size: 2vh;
-    font-size: 2vw;
-    /* padding: 5em; */
-}
-
-header>nav>ul {
-    display: table-row;
-    list-style-type: none;
-}
-
-header>nav>ul>li {
-    display: table-cell;
-    text-align: center;
-}
-
-/* Aside Styles */
+    p:nth-of-type(2n) {
+        text-indent: 5vw;
+    }
 /* Nav Styles */
-header>nav>ul>li a:link,
-header>nav>ul>li a:visited {
-    text-decoration: none;
-    color: lavender;
-}
+/* The code below holds style rules for the nav elements. 
+This includes hyperlink behavior and spacing. 
+The style rules also specify color and font size */
+    header>nav>ul>li a:link,
+    header>nav>ul>li a:visited {
+        text-decoration: none;
+        color: lavender;
+    }
 
-header>nav>ul>li a:hover,
-header>nav>ul>li a:active {
-    text-decoration: underline;
-}
-
-/* footer */
-/* footer>nav>ul {
-    display: table-row;
-    list-style-type: none;
-}
-
-footer>nav>ul>li {
-    display: table-cell;
-    text-align: center;
-} */
+    header>nav>ul>li a:hover,
+    header>nav>ul>li a:active {
+        text-decoration: underline;
+    }
 
 
+    header>nav {
+        display: table;
+        width: 100%;
+        background-color: rgb(147, 147, 147);
+        font-size: 2vh;
+        font-size: 2vw;
+ 
+    }   
 
-/* footer nav {
-    background-color: rgb(147, 147, 147);
-    width: 100%;
-} */
+    header>nav>ul {
+        display: table-row;
+        list-style-type: none;
+    }
 
-img {
-    width: 90%;
-    height: 90%;
-    margin-bottom: 30px;
-    padding-left: 60px;
+    header>nav>ul>li {
+        display: table-cell;
+        text-align: center;
+    }
+
+/* image styles */
+/* The styles rules below affect any images on the page. 
+These consist of size and spacing.  */
+    img {
+        width: 90%;
+        height: 90%;
+        margin-bottom: 30px;
+        padding-left: 60px;
 
 
-}
+    }
 
 
 
